# language

./: .env  Cargo.toml  diesel.toml  language.db
data/: language.db
migrations/2025-01-27-075600_words/: down.sql  up.sql
migrations/2025-02-03-115941_verb_forms/: down.sql  up.sql
src/: gui.rs  lib.rs  main.rs  quiz.rs  schema.rs  word.rs
