[package]
name = "language"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15.0"
html5ever = "0.29.0"
kuchiki = "0.8.1"
markup5ever_rcdom = { version = "0.5.0-unofficial" }
reqwest = {version = "0.12.12", features=["blocking"]}
scraper = "0.22.0"
