[package]
name = "language"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15.0"
iced = {version ="0.13.1", features=["multi-window", "debug"]}
reqwest = {version = "0.12.12", features=["blocking"]}
scraper = "0.22.0"
log = "0.4"
env_logger = "0.11.6"
